<resources>
    <string name="app_name">BancoDamato</string>
    <string name="introduce_el_usuario">Introduce el usuario</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="introduce_la_contrase_a">Introduce la contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="aqui_el_dni">Aqui el dni</string>
    <string name="bienvenido_a_tu_banco">Bienvenido a tu banco</string>
    <string name="inicio">ENTRAR</string>
    <string name="bienvenido_a">Bienvenido/a</string>
    <string name="posicion_global">POSICION GLOBAL</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="transferencias">TRANSFERENCIAS</string>
    <string name="cambiar_contrase_a">CAMBIAR CONTRASEÑA</string>
    <string name="promociones">PROMOCIONES</string>
    <string name="cajeros">CAJEROS</string>
    <string name="volver">SALIR</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="error_contrasenya">"La contraseña no puede estar vacia"</string>
    <string name="error_usuario">"Usuario no disponible"</string>
    <string name="usuario_vacio">El usuario no puede estar vacio</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo_modificar_contraseña">\"Modificar Contraseña\"</string>
    <string name="toas_contraseñas_distintas">Las contraseñas no coinciden</string>
    <string name="contraseñas_iguales">Contraseñas modificadas</string>
    <string name="banco">Banco</string>
    <string name="elige_tu_cuenta">Elige tu cuenta:</string>
    <string name="cuenta_propia">Cuenta propia</string>
    <string name="cuenta_ajena">Cuenta ajena</string>
    <string name="escriba_el_numero_de_cuenta_ajena">Escriba el numero de cuenta ajena</string>
    <string name="cantidad">Cantidad:</string>
    <string name="enviar_justificante">Enviar justificante</string>
    <string name="enviar">Enviar</string>
    <string name="propia">propia</string>
    <string name="ajena">ajena</string>
    <string name="Cuenta_origen">Cuenta origen</string>
    <string name="A_cuenta">A cuenta</string>
    <string name="Importe">Importe</string>
    <string name="open_nav">Abrir navegacion Drawer</string>
    <string name="close_nav">Cerrar navegacion Drawer</string>
    <string name="textoDialogo">Id: %1$s\nTipo: %2$s\nFecha Operación: %3$s\nDescripción: %4$s\nImporte: %5$s\nCuenta Origen: %6$s\nCuenta Destino: %7$s</string>


    <!-- Preference Titles -->
    <string name="titulo_settings">Ajustes</string>
    <string name="media">Multimedia</string>
    <string name="music">Musica</string>
    <string name="music_on">Escuchar la música mientras se ejecuta la aplicación</string>
    <string name="music_off">No escuchar la música mientras se ejecuta la aplicación</string>

    <string name="welcome_video">Video de bienvenida</string>
    <string name="welcome_video_on">Reproducir un video al iniciar la aplicanción</string>
    <string name="welcome_video_off">No reproducir un video al iniciar la aplicanción</string>

    <string name="language">Lenguaje</string>
    <string name="app_language">Idioma de la aplicación</string>
    <string name="language_dialog">Elige un idioma</string>
    <string name="spanish">Español</string>
    <string name="english">Ingles</string>


    <string name="data">Data</string>
    <string name="data_dialog">Elige donde guardar los datos</string>
    <string name="data_origin">Origen de los datos</string>
    <string name="local">Datos locales</string>
    <string name="cloud">Servicio web</string>

    <string name="notifications">Notificaciones</string>
    <string name="active_notifications">Habilitar notificaciones</string>
    <string name="volume">Volumen</string>
    <string name="atm">cajeros</string>
    <string name="btnSave">guardar</string>
    <string name="btnCancel">cancelar</string>
    <string name="btnUpdate">actualizar</string>
    <string name="btnDelete">eliminar</string>
    <string name="createAtm">crear cajero</string>
    <string name="address">direccion</string>
    <string name="latitude">latitud</string>
    <string name="longitude">altitud</string>
    <string name="modifyAtm">modificar cajero</string>
    <string name="deletedSuccessfully">cajero eliminado</string>
    <string name="numberException">Error !!!</string>
    <string name="updatedSuccessfully">actualizado</string>
    <string name="createdSuccessfully">cajero creado</string>
    <string name="placeOf">ubicacion cajero</string>
    <string name="localizarCajeros">localizar</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>