<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TransferActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/botonesAccesos"
        android:padding="20dp"
        android:text="@string/banco"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTrans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="35dp"
        android:gravity="center"
        android:text="@string/transferencias"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/elige_tu_cuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrans" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <Spinner
        android:id="@+id/spCuentaOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glH35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <RadioGroup
        android:id="@+id/rgCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glH45">

        <RadioButton
            android:id="@+id/rbCuentaPropia"
            style="@style/radioBotons"
            android:checked="true"
            android:text="@string/cuenta_propia" />

        <RadioButton
            android:id="@+id/rbCuentaAjena"
            style="@style/radioBotons"
            android:text="@string/cuenta_ajena" />

    </RadioGroup>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Spinner
        android:id="@+id/spCuentaDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glH55" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCuentaDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/escriba_el_numero_de_cuenta_ajena"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glH55" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="256dp" />

    <LinearLayout
        android:id="@+id/llCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glH65">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Importe" />

        <Spinner
            android:id="@+id/spDivisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <CheckBox
        android:id="@+id/cbEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_justificante"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80" />

    <LinearLayout
        android:id="@+id/lineraInferior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glH80">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnviar"
            style="@style/EstiloBotones"
            android:text="@string/enviar" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelar"
            style="@style/EstiloBotones"
            android:backgroundTint="@color/botonesMenu"
            android:text="@string/cancelar"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>