<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorFondoApp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Podemos hacer el scrool cuando tengamos muchos cardviews  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgUser"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/usuario" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/bienvenido_a"
                            android:textSize="30dp" />

                        <TextView
                            android:id="@+id/txtvUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/aqui_el_dni"
                            android:textSize="20dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- espacio para mas cardviews-->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPosicion"
                        android:text="@string/posicion_global"
                        android:drawableStart="@drawable/ic_posicion_global"
                        style="@style/EstiloBotonesMenu"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMovimientos"
                        android:text="@string/movimientos"
                        android:drawableStart="@drawable/ic_movimientos"
                        style="@style/EstiloBotonesMenu"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnTransferencias"
                        android:text="@string/transferencias"
                        android:drawableStart="@drawable/ic_transferencias"
                        style="@style/EstiloBotonesMenu"
                        />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCambiarContrasenya"
                        android:text="@string/cambiar_contrase_a"
                        android:drawableStart="@android:drawable/ic_menu_edit"
                        style="@style/EstiloBotonesMenu"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPromociones"
                        android:text="@string/promociones"
                        android:drawableStart="@android:drawable/ic_popup_reminder"
                        style="@style/EstiloBotonesMenu"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCajeros"
                        style="@style/EstiloBotonesMenu"
                        android:text="@string/cajeros"
                        android:drawableStart="@android:drawable/ic_dialog_map"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSalir"
                        android:text="@string/volver"
                        android:drawableStart="@drawable/ic_salir"
                        style="@style/EstiloBotonesMenu"
                        />




                </LinearLayout>





            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="add task"
        android:src="@drawable/ic_add_task"
        app:layout_anchor="@id/btnAppBar"
        android:backgroundTint="@color/botonesAccesos"/>

    <!--boton inferior, funciona junto a CoordinatorLayout-->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/btnAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:navigationIcon="@drawable/ic_menu"
        android:backgroundTint="@color/botonesMenu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>